Removed Newhallywood Film Festival and added Pet adoption event details.

--- a/index.htm
+++ b/index.htm
@@ -278,17 +278,32 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                           <td align="center" valign="top" width="557">
 <p align="center">
 <!-------------------------------------------------------------------------------->
-
-<h2 align="center">Click below for details on the upcoming Newhallywood Silent Film Festival!<br><br></h2>
-<a target="_blank" href="https://santaclaritaarts.com/newhallywood">
-<img src="Event_Pages/Newhallywood2023.png"/>
+<h3>Click on the cuties below to learn about the
+</h3>
+<h2> Heart to Home Pet Adoption event </h2>
+<h2> Saturday, June 17<sup>th</sup>, 10am&ndash;4pm </h2>
+<a href= "Event_Pages/2023_petAdoption-lg.png" 
+title="Heart to Home Pet Adoption" rel="lightbox[petAdoption]">
+<img src="Event_Pages/2023_petAdoption-sm.png" />
 </a>
+<br>
+<img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
+<!-------------------------------------------------------------------------------->
+<div id="mainlefttwothirds">
+<br><br>
+<h2 align="right">Click on the flyer to the right to learn about free movies in Hart Park this summer!
+</h2>
+</div>
+<div id="mainrightthird">
+<a href= "Event_Pages/movies2023/SummerMovieNightsFlyer.jpg" 
+title="Summer Movie Nights" rel="lightbox[movieNights]">
+<img src="Event_Pages/movies2023/SummerMovieNightsFlyer_sm.jpg" />
+</a>
+</div>
 <br>
 <br>
 <!-------------------------------------------------------------------------------->
-
 <!--
-<img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
 
 <div id="mainlefttwothirds">
 <br><br>
@@ -305,32 +320,6 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 -->
 <!-------------------------------------------------------------------------------->
 
-<img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
-
-<div id="mainlefttwothirds">
-<br><br>
-<h2 align="right">Click on the flyer to the right to learn about free movies in Hart Park this summer!
-</h2>
-</div>
-<div id="mainrightthird">
-<a href= "Event_Pages/movies2023/SummerMovieNightsFlyer.jpg" 
-title="Summer Movie Nights" rel="lightbox[movieNights]">
-<img src="Event_Pages/movies2023/SummerMovieNightsFlyer_sm.jpg" />
-</a>
-</div>
-<br>
-<br>
-<!-------------------------------------------------------------------------------->
-
-<img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
-<h2>Healing Workshop in Hart Park!</h2>
-<h4>Click below for details</h4>
-<a target="_blank" href="https://anc.apm.activecommunities.com/losangelescounty/activity/search?onlineSiteId=0&activity_select_param=2&center_ids=234&viewMode=list">
-<img src="Event_Pages/HealingWorkshop-Spring2023.jpg"/>
-</a>
-<br>
-<br>
-<!------------------------------------------------------------------------------------>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2023 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
@@ -345,19 +334,6 @@ Saturdays 10:30am&mdash;12:30pm
 title="Barnyard Tours" rel="lightbox[barnyardTour]">
 Barnyard Tours
 </a>
-<tr> <td id="EventDate">
-Sunday, May 21<sup>st</sup> at 11am&ndash;1pm
-</td> <td id="Event"> 
-<a target="_blank" href= "https://anc.apm.activecommunities.com/losangelescounty/activity/search?onlineSiteId=0&activity_select_param=2&center_ids=234&viewMode=list" >
-Somatic Healing Workshop
-</a>
-<tr> <td id="EventDate">
-Friday, Saturday, Sunday &amp; Monday, May 26<sup>th</sup>&ndash;29<sup>th</sup>
-</td> <td id="Event"> 
-<a target="_blank" href= "https://santaclaritaarts.com/newhallywood/" >
-Newhallywood Silent Film Festival
-</a>
-<tr> <td id="EventDate">
 </td></tr>
 <tr> <td id="EventDate">
 Fridays at 7:45pm, June 16<sup>th</sup> &amp; 30<sup>th</sup>, July 28<sup>th</sup>
@@ -368,9 +344,12 @@ Free Summer Movies Nights in the Park
 </a>
 </td></tr>
 <tr> <td id="EventDate">
-Saturday, June 17<sup>th</sup> (Save the date, details to follow)
+Saturday, June 17<sup>th</sup> 10am&ndash;4pm
 </td> <td id="Event"> 
-Pet Adoption Event
+<a href= "Event_Pages/2023_petAdoption-lg.png" 
+title="Heart to Home Pet Adoption" rel="lightbox[petAdoption]">
+Heart to Home Pet Adoption Event
+</a>
 </td></tr>
 <tr> <td id="EventDate">
 Saturday Sep. 30<sup>td</sup> &amp; Oct 1<sup>st</sup> Picnic Grounds
