Replaced pet adoption with save-the-date for Pow Wow.

--- a/index.htm
+++ b/index.htm
@@ -278,14 +278,14 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                           <td align="center" valign="top" width="557">
 <p align="center">
 <!-------------------------------------------------------------------------------->
-<h3>Click on the cuties below to learn about the
-</h3>
-<h2> Heart to Home Pet Adoption event </h2>
-<h2> Saturday, June 17<sup>th</sup>, 10am&ndash;4pm </h2>
-<a href= "Event_Pages/2023_petAdoption-lg.png" 
-title="Heart to Home Pet Adoption" rel="lightbox[petAdoption]">
-<img src="Event_Pages/2023_petAdoption-sm.png" />
+<h2>Save the dates!
+</h2>
+<h3>And click below to watch for details as they become available</h3>
+<a href= "https://friendsofhartpark.com/Event_Pages/powwow.html" 
+title="Hart of the West Pow Wow">
+<img src="Event_Pages/powwow/PowWow2023-sm.png" />
 </a>
+<br>
 <br>
 <img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
 <!-------------------------------------------------------------------------------->
@@ -336,19 +336,11 @@ Barnyard Tours
 </a>
 </td></tr>
 <tr> <td id="EventDate">
-Fridays at 7:45pm, June 16<sup>th</sup> &amp; 30<sup>th</sup>, July 28<sup>th</sup>
+Fridays at 7:45pm, June 30<sup>th</sup>, July 28<sup>th</sup>
 </td> <td id="Event"> 
 <a href= "Event_Pages/movies2023/SummerMovieNightsFlyer.jpg" 
 title="Summer Movie Nights" rel="lightbox[movieNights]">
 Free Summer Movies Nights in the Park
-</a>
-</td></tr>
-<tr> <td id="EventDate">
-Saturday, June 17<sup>th</sup> 10am&ndash;4pm
-</td> <td id="Event"> 
-<a href= "Event_Pages/2023_petAdoption-lg.png" 
-title="Heart to Home Pet Adoption" rel="lightbox[petAdoption]">
-Heart to Home Pet Adoption Event
 </a>
 </td></tr>
 <tr> <td id="EventDate">
