Added Pow Wow details.  powwow.html is messed up at the bottom.

--- a/index.htm
+++ b/index.htm
@@ -278,10 +278,10 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                           <td align="center" valign="top" width="557">
 <p align="center">
 <!-------------------------------------------------------------------------------->
-<h2>Save the dates!
-</h2>
-<h3>And click below to watch for details as they become available</h3>
-<a href= "https://friendsofhartpark.com/Event_Pages/powwow.html" 
+<h1>Pow Wow is back!
+</h1>
+<h2>Click below for details:</h2>
+<a href= "Event_Pages/powwow.html" 
 title="Hart of the West Pow Wow">
 <img src="Event_Pages/powwow/PowWow2023-sm.png" />
 </a>
