Added Fall 2023 HOTM

--- a/index.htm
+++ b/index.htm
@@ -222,8 +222,8 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   </a>
                                   <h2>
                                   Click 
-                                  <a href="https://mailchi.mp/e16104a28aa4/hart-of-the-matter-summer-2023" target="_blank">
-                                  here for the Summer 2023 Hart of the Matter newsletter</a>.<br>
+                                  <a href="https://us13.campaign-archive.com/?u=49d82e29767e797493dce561a&id=0dd38e7ec9" target="_blank">
+                                  here for the Fall 2023 Hart of the Matter newsletter</a>.<br>
                                   Click <a href="Newsletters/newsletters.html"> here for other recent newsletters</a>.
                                   </h2>
                                   </td>
@@ -287,24 +287,11 @@ title="Hart of the West Pow Wow">
 </a>
 <br>
 <br>
-<img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
 <!-------------------------------------------------------------------------------->
-<div id="mainlefttwothirds">
-<br><br>
-<h2 align="right">Click on the flyer to the right to learn about free movies in Hart Park this summer!
-</h2>
-</div>
-<div id="mainrightthird">
-<a href= "Event_Pages/movies2023/SummerMovieNightsFlyer.jpg" 
-title="Summer Movie Nights" rel="lightbox[movieNights]">
-<img src="Event_Pages/movies2023/SummerMovieNightsFlyer_sm.jpg" />
-</a>
-</div>
-<br>
-<br>
 <!-------------------------------------------------------------------------------->
 <!--
 
+<img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
 <div id="mainlefttwothirds">
 <br><br>
 <h2 align="right">Click on the new book about William S. Hart Park to watch an interview with its authors, 
@@ -333,14 +320,6 @@ Saturdays 10:30am&mdash;12:30pm
 <a href= "Event_Pages/2022barnyardTours.png" 
 title="Barnyard Tours" rel="lightbox[barnyardTour]">
 Barnyard Tours
-</a>
-</td></tr>
-<tr> <td id="EventDate">
-Fridays at 7:45pm, June 30<sup>th</sup>, July 28<sup>th</sup>
-</td> <td id="Event"> 
-<a href= "Event_Pages/movies2023/SummerMovieNightsFlyer.jpg" 
-title="Summer Movie Nights" rel="lightbox[movieNights]">
-Free Summer Movies Nights in the Park
 </a>
 </td></tr>
 <tr> <td id="EventDate">
