--- a/index.html
+++ b/index.html
@@ -278,10 +278,16 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                           <td align="center" valign="top" width="557">
 <p align="center">
 <!-------------------------------------------------------------------------------->
-<h1>Pow Wow is back!
-</h1>
-<h2>Click below for details:</h2>
-<a href= "Event_Pages/powwow.html" 
+<h1>Ring in the Holidays!</h1>
+<a href="Event_Pages/BarnyardLightTour2023-lg.jpg" 
+title="Barnyard Holiday Lights Tours" rel="lightbox[barnyardLightsTour]">
+<img src="Event_Pages/BarnyardLightTour2023-sm.jpg" />
+</a>
+<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+<!-------------------------------------------------------------------------------->
+<h3>Click banner below for pictures from 2023's 29th annual</h3>
+<h1>Hart of the West Pow Wow!</h1>
+<a target="_blank" href="https://www.facebook.com/media/set/?set=a.323036670375755&type=3" 
 title="Hart of the West Pow Wow">
 <img src="Event_Pages/powwow/PowWow2023-sm.png" />
 </a>
@@ -323,10 +329,11 @@ Barnyard Tours
 </a>
 </td></tr>
 <tr> <td id="EventDate">
-Saturday Sep. 30<sup>td</sup> &amp; Oct 1<sup>st</sup> Picnic Grounds
+Saturday, Dec. 9<sup>th</sup>
 </td> <td id="Event"> 
-<a href="Event_Pages/powwow.html">
-Native American Pow Wow &amp; Craft Fair
+<a href= "Event_Pages/BarnyardLightTour2023-lg.jpg" 
+title="Barnyard Holiday Lights Tours" rel="lightbox[barnyardLightsTour]">
+Barnyard Holiday Lights Tour
 </a>
 </td></tr>
 <!--
