Added nice graphic to get to PowWow2023 images, and updated Pow Wow page.

--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -200,12 +200,16 @@ and The Friends of Hart Park &amp; Museum<br></h2>
 
                           <p align="center"></p>
 
-                          <h1 align="center">Pow Wow is back!
-                          <br>September 30<sup>th</sup> &amp; October
-                          1<sup>st</sup>!</h1>
+                          <h2 align="center">Check back here for the 30<sup>th</sup> Annual Hart of the West<h2><br>
+                          <h1 align="center">Pow Wow in 2024!</h1>
 
                           <p align="center"></p>
 
+<a target="_blank" href="https://www.facebook.com/media/set/?set=a.323036670375755&type=3" 
+title="Hart of the West Pow Wow">
+<img src="powwow/2023/PowWow2023-lg.jpg" />
+</a>
+<!--
                           <p align="center"><img src=
                           "PowWowTitle.png" alt="PowWow"></p>
 
@@ -220,8 +224,9 @@ and The Friends of Hart Park &amp; Museum<br></h2>
                           "https://www.tataviam-nsn.us/event/hart-pow-wow/">
                           CLICK HERE!</a></h2><br>
                           <br>
+-->
                           <!--=======================================-->
-
+<!--
                           <table border="0" width="100%">
                             <tbody>
                               <tr>
@@ -234,6 +239,7 @@ and The Friends of Hart Park &amp; Museum<br></h2>
                               </tr>
                             </tbody>
                           </table>
+-->
                         </td>
 
                         <td width="60">&nbsp;</td>
