--- a/index.html
+++ b/index.html
@@ -285,11 +285,9 @@ title="Barnyard Holiday Lights Tours" rel="lightbox[barnyardLightsTour]">
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <!-------------------------------------------------------------------------------->
-<h3>Click banner below for pictures from 2023's 29th annual</h3>
-<h1>Hart of the West Pow Wow!</h1>
 <a target="_blank" href="https://www.facebook.com/media/set/?set=a.323036670375755&type=3" 
 title="Hart of the West Pow Wow">
-<img src="Event_Pages/powwow/PowWow2023-sm.png" />
+<img src="Event_Pages/powwow/2023/PowWow2023-sm.jpg" />
 </a>
 <br>
 <br>
