Added Winter 2023 Newletter

--- a/index.htm
+++ b/index.htm
@@ -222,8 +222,8 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   </a>
                                   <h2>
                                   Click 
-                                  <a href="https://us13.campaign-archive.com/?u=49d82e29767e797493dce561a&id=0dd38e7ec9" target="_blank">
-                                  here for the Fall 2023 Hart of the Matter newsletter</a>.<br>
+                                  <a href="https://mailchi.mp/b4c34d7fa74b/hart-of-the-matter-winter-2023" target="_blank">
+                                  here for the Winter 2023 Hart of the Matter newsletter</a>.<br>
                                   Click <a href="Newsletters/newsletters.html"> here for other recent newsletters</a>.
                                   </h2>
                                   </td>
