--- a/Newsletters/newsletters.html
+++ b/Newsletters/newsletters.html
@@ -230,6 +230,11 @@ function MM_swapImage() { //v3.0
                                   Fall 2023
                                   </a>
                                   </li>
+                                  <li>
+                                  <a href="https://mailchi.mp/b4c34d7fa74b/hart-of-the-matter-winter-2023" target="_blank">
+                                  Winter 2023
+                                  </a>
+                                  </li>
                                   </ul>
                     </div>
                     For earlier editions, see <a href="https://scvhistory.com/scvhistory/googlesearchresults.htm?cx=010361867682521671142%3Abapf7zmeoby&cof=FORID%3A10&ie=ISO-8859-1&q=hart+of+the+matter&sa=Search" target="_blank">SCVhistory.com</a>
