Made Barnyard lights a past event, and linked to photos.

--- a/index.htm
+++ b/index.htm
@@ -278,9 +278,10 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                           <td align="center" valign="top" width="557">
 <p align="center">
 <!-------------------------------------------------------------------------------->
-<h1>Ring in the Holidays!</h1>
-<a href="Event_Pages/BarnyardLightTour2023-lg.jpg" 
-title="Barnyard Holiday Lights Tours" rel="lightbox[barnyardLightsTour]">
+<h2>Click on the banner below<br>
+to see photos from the...</h2>
+<a href="https://www.facebook.com/media/set/?vanity=friendsofhartpark&set=a.352777690734986" 
+target="_blank" title="Barnyard Holiday Lights Tours">
 <img src="Event_Pages/BarnyardLightTour2023-sm.jpg" />
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
@@ -324,14 +325,6 @@ Saturdays 10:30am&mdash;12:30pm
 <a href= "Event_Pages/2022barnyardTours.png" 
 title="Barnyard Tours" rel="lightbox[barnyardTour]">
 Barnyard Tours
-</a>
-</td></tr>
-<tr> <td id="EventDate">
-Saturday, Dec. 9<sup>th</sup>
-</td> <td id="Event"> 
-<a href= "Event_Pages/BarnyardLightTour2023-lg.jpg" 
-title="Barnyard Holiday Lights Tours" rel="lightbox[barnyardLightsTour]">
-Barnyard Holiday Lights Tour
 </a>
 </td></tr>
 <!--
