--- a/Hart_Hall/hart_hall.html
+++ b/Hart_Hall/hart_hall.html
@@ -116,7 +116,7 @@ function MM_swapImage() { //v3.0
 					<P>A meeting hall has been built near the park entrance on 
 					Newhall Avenue that will hold almost 200 people for meetings and about 120 for sit down dinners inside the Hall. 
 					The building was formerly a "pole barn" and is sometimes still affectionately referred to by that name -- the poles were incorporated as an architectural element and are still visible.</P>
-					<P>The Hart Hall can be rented for parties, meetings, weddings and community functions.  Fees include set up and clean up.  Fees include tables, chairs, a "caterer's kitchen" and an outside patio.</P>
+					<P>The Hart Hall can be rented for parties, meetings, weddings and community functions. Fees include tables, chairs, a "caterer's kitchen" and an outside patio.</P>
                     <P align="center"><B>For reservations and more information, call&nbsp;
                     661-259-1750</B></P>
 					</TD>
