--- a/index.html
+++ b/index.html
@@ -276,21 +276,34 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                     continued support.</font></p>
                               </b></i></td>
                           <td align="center" valign="top" width="557">
-<p align="center">
 <!-------------------------------------------------------------------------------->
-<h2>Click on the banner below<br>
-to see photos from the...</h2>
+<h3>See a landmark</h3> 
+<h2>William S. Hart</h2> 
+<h3>film, and learn all about Hart&rsquo;s producer</h3>
+<h2>Thomas Ince, </h2>
+<h3>this year's inductee, at the </h3>
+<h2>Newhallywood Silent Film Festival</h2>
+<h3>all <em>for free!</em>  Click on the banner below for details.<br></h3>
+<a href="https://santaclaritaarts.com/newhallywood/"
+target="_blank" title="2024 Newhallywood Silent Film Festival">
+<img src="Event_Pages/spring2024/newhallywood2024-sm.jpg" />
+</a>
+<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+<!-------------------------------------------------------------------------------->
+<h3>Mark your calendars for this year&rsquo;s</h3>
+<h2>Cowboy Festival</h2>
+<h4>Click on the banner below for details, as they become available.<br></h4>
+<a href="https://cowboyfestival.org/" 
+target="_blank" title="2024 Cowboy Festival">
+<img src="Event_Pages/spring2024/cowboyfest2024-sm.jpg" />
+</a>
+<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+<!-------------------------------------------------------------------------------->
+<h4>Click on the banner below to see photos from the...</h4>
 <a href="https://www.facebook.com/media/set/?vanity=friendsofhartpark&set=a.352777690734986" 
 target="_blank" title="Barnyard Holiday Lights Tours">
 <img src="Event_Pages/BarnyardLightTour2023-sm.jpg" />
 </a>
-<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<!-------------------------------------------------------------------------------->
-<a target="_blank" href="https://www.facebook.com/media/set/?set=a.323036670375755&type=3" 
-title="Hart of the West Pow Wow">
-<img src="Event_Pages/powwow/2023/PowWow2023-sm.jpg" />
-</a>
-<br>
 <br>
 <!-------------------------------------------------------------------------------->
 <!-------------------------------------------------------------------------------->
@@ -320,24 +333,30 @@ title="Hart of the West Pow Wow">
                                   cellspacing="5">
 <tbody>
 <tr> <td id="EventDate">
-Saturdays 10:30am&mdash;12:30pm
+Saturdays 10:30am&ndash;12:30pm
 </td> <td id="Event"> 
 <a href= "Event_Pages/2022barnyardTours.png" 
 title="Barnyard Tours" rel="lightbox[barnyardTour]">
 Barnyard Tours
 </a>
 </td></tr>
+<tr> <td id="EventDate">
+Friday&ndash;Sunday,<br>Feb. 16<sup>th</sup>&ndash;18<sup>th</sup>
+</td> <td id="Event"> 
+<a href="https://santaclaritaarts.com/newhallywood/"
+target="_blank" title="2024 Newhallywood Silent Film Festival">
+Newhallywood Silent Film Festival
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+Thursday&ndash;Sunday,<br>Apr. 18<sup>th</sup>&ndash;21<sup>st</sup>
+</td> <td id="Event"> 
+<a href="https://cowboyfestival.org/" 
+target="_blank" title="2024 Cowboy Festival">
+Cowboy Festival
+</a>
+</td></tr>
 <!--
-<tr> <td id="EventDate">
-<del>Sunday, Oct. 11<sup>th</sup> 11am&mdash;4pm, Picnic Grounds</del>
-</td> <td id="Event"> 
-<del>Bow Wows &amp; Meows Pet Fair</del>
-</td></tr>
-<tr> <td id="EventDate">
-<del>Saturday &amp; Sunday, Oct. 17<sup>th</sup> &amp; Oct 18<sup>th</sup> in Hart Hall</del>
-</td> <td id="Event"> 
-<del>SCV Artists Association Arts Classic</del>
-</td></tr>
 <tr> <td id="EventDate">
 Saturday, Nov. 7<sup>th</sup> in Hart Hall
 </td> <td id="Event"> 
