--- a/index.html
+++ b/index.html
@@ -277,16 +277,25 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <!-------------------------------------------------------------------------------->
-<h3>See a landmark</h3> 
-<h2>William S. Hart</h2> 
-<h3>film, and learn all about Hart&rsquo;s producer</h3>
-<h2>Thomas Ince, </h2>
-<h3>this year's inductee, at the </h3>
-<h2>Newhallywood Silent Film Festival</h2>
-<h3>all <em>for free!</em>  Click on the banner below for details.<br></h3>
-<a href="https://santaclaritaarts.com/newhallywood/"
-target="_blank" title="2024 Newhallywood Silent Film Festival">
-<img src="Event_Pages/spring2024/newhallywood2024-sm.jpg" />
+<h3>See free 
+<a href= "Event_Pages/spring2024/Movies-Feb-Mar-lg.jpg" 
+title="Free Movies" rel="lightbox[movies]">
+Movies in the Park! </h3>
+<img src="Event_Pages/spring2024/Movies-Feb-Mar-sm.jpg" />
+</a>
+<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+<!-------------------------------------------------------------------------------->
+<a href= "Event_Pages/spring2024/CraftyKids-Mar-Apr-lg.jpg" 
+title="Crafts for Kids" rel="lightbox[crafts]">
+<h3>Crafts for Kids!</h3>
+<img src="Event_Pages/spring2024/CraftyKids-Mar-Apr-sm.jpg" />
+</a>
+<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+<!-------------------------------------------------------------------------------->
+<a href= "Event_Pages/spring2024/Yoga-Mar-lg.jpg" 
+title="Yoga in the Park" rel="lightbox[yoga]">
+<h3>Yoga in the Park</h3>
+<img src="Event_Pages/spring2024/Yoga-Mar-sm.jpg"
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <!-------------------------------------------------------------------------------->
@@ -299,10 +308,11 @@ target="_blank" title="2024 Cowboy Festival">
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <!-------------------------------------------------------------------------------->
-<h4>Click on the banner below to see photos from the...</h4>
-<a href="https://www.facebook.com/media/set/?vanity=friendsofhartpark&set=a.352777690734986" 
-target="_blank" title="Barnyard Holiday Lights Tours">
-<img src="Event_Pages/BarnyardLightTour2023-sm.jpg" />
+<h3>See MORE 
+<a href= "Event_Pages/spring2024/Movies2-June-Aug-lg.jpg" 
+title="Free Movies" rel="lightbox[movies]">
+Movies in the Park! </h3>
+<img src="Event_Pages/spring2024/Movies2-June-Aug-sm.jpg" />
 </a>
 <br>
 <!-------------------------------------------------------------------------------->
@@ -326,7 +336,7 @@ target="_blank" title="Barnyard Holiday Lights Tours">
 <!-------------------------------------------------------------------------------->
 
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-                                <h2>2023 Calendar of Events</h2>
+                                <h2>2024 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
@@ -341,11 +351,27 @@ Barnyard Tours
 </a>
 </td></tr>
 <tr> <td id="EventDate">
-Friday&ndash;Sunday,<br>Feb. 16<sup>th</sup>&ndash;18<sup>th</sup>
+February &amp; March
 </td> <td id="Event"> 
-<a href="https://santaclaritaarts.com/newhallywood/"
-target="_blank" title="2024 Newhallywood Silent Film Festival">
-Newhallywood Silent Film Festival
+<a href= "Event_Pages/spring2024/Movies-Feb-Mar-lg.jpg" 
+title="Free Movies" rel="lightbox[movies]">
+Free Movies in the Park!
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+March 7<sup>th</sup>&ndash;28<sup>th</sup>
+</td> <td id="Event"> 
+<a href= "Event_Pages/spring2024/Yoga-Mar-lg.jpg" 
+title="Yoga in the Park" rel="lightbox[yoga]">
+Yoga in the Park
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+March &amp; April
+</td> <td id="Event"> 
+<a href= "Event_Pages/spring2024/CraftyKids-Mar-Apr-lg.jpg" 
+title="Crafts for Kids" rel="lightbox[crafts">
+Crafts for Kids!
 </a>
 </td></tr>
 <tr> <td id="EventDate">
@@ -354,6 +380,14 @@ Thursday&ndash;Sunday,<br>Apr. 18<sup>th</sup>&ndash;21<sup>st</sup>
 <a href="https://cowboyfestival.org/" 
 target="_blank" title="2024 Cowboy Festival">
 Cowboy Festival
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+June&mdash;August
+</td> <td id="Event"> 
+<a href= "Event_Pages/spring2024/Movies2-June-Aug-lg.jpg" 
+title="More Free Movies" rel="lightbox[movies]">
+More Movies in the Park!
 </a>
 </td></tr>
 <!--
@@ -367,7 +401,7 @@ Saturday &amp; Sunday, Nov 21<sup>st</sup> &amp; 22<sup>nd</sup> 10am&mdash;4pm 
 </td> <td id="Event"> 
 9th Annual Hart Holiday Boutique
 </td></tr>
-<tr> <td id="EventDate">
+<tr> <td id="EventDate"
 Saturday, Dec. 5<sup>th</sup>
 </td> <td id="Event"> 
 Cowboys &amp; Carols
