Added PowWow initial date, reorded upcoming dates, changed directors list, added Winter 2024 newsletter supplement.

--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -73,7 +73,7 @@ background="../images/202019_back.gif" bgcolor="#202019">
 
                 <td width="896">
                   <div class="TTL" align="center">
-                    <p style="margin-top: 0"><b>29<sup>th</sup>
+                    <p style="margin-top: 0"><b>30<sup>th</sup>
                     Annual Hart of the West Pow Wow</b></p>
                   </div>
                 </td>
@@ -198,10 +198,10 @@ and The Friends of Hart Park &amp; Museum<br></h2>
                             <h2 align="center">26<sup>th</sup> Annual</h2>
 -->
 
-                          <p align="center"></p>
-
-                          <h2 align="center">Check back here for the 30<sup>th</sup> Annual Hart of the West<h2><br>
-                          <h1 align="center">Pow Wow in 2024!</h1>
+                          <p align="center">
+                          <img src="powwow/2024/PowWow2024-med.jpg" />
+                          </p>
+                          <h2 align="center">Check back here for details as they become available.<h2><br>
 
                           <p align="center"></p>
 
