--- a/Newsletters/newsletters.html
+++ b/Newsletters/newsletters.html
@@ -235,6 +235,13 @@ function MM_swapImage() { //v3.0
                                   Winter 2023
                                   </a>
                                   </li>
+                                  <ul>
+                                  <li>
+                                  <a href="https://mailchi.mp/d70fd073c90f/hart-of-the-matter-winter-2024-supplement?e=dd5851e8c8" target="_blank">
+                                  Winter Supplement &mdash; Jeff Wheat
+                                  </a>
+                                  </li>
+                                  </ul>
                                   </ul>
                     </div>
                     For earlier editions, see <a href="https://scvhistory.com/scvhistory/googlesearchresults.htm?cx=010361867682521671142%3Abapf7zmeoby&cof=FORID%3A10&ie=ISO-8859-1&q=hart+of+the+matter&sa=Search" target="_blank">SCVhistory.com</a>
