--- a/The_Friends/directors.html
+++ b/The_Friends/directors.html
@@ -157,18 +157,18 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                             <td id="BOLD" align="left">Leon Worden</td>
                             <td align="left">Director/Vice President</td>
                             <td align="left"><br></td>
-                            <td id="BOLD" align="left">Sheila Miller<br></td>
+                            <td id="BOLD" align="left">Janis Ashley<br></td>
                             <td align="left">Director/Secretary</td>
                           </tr>
                           <tr>
                             <td id="BOLD" align="left">Becki Basham</td>
-                            <td align="left">Director/Vice President</td>
+                            <td align="left">Director/Gift Store Mgr</td>
                             <td align="left"><br></td>
-                            <td id="BOLD" align="left">Jack C. Stewart</td>
+                            <td id="BOLD" align="left">Rudy Ortega</td>
                             <td align="left">Director</td>
                           </tr>
                           <tr>
-                            <td id="BOLD" align="left">Janis Ashley<br>
+                            <td id="BOLD" align="left">Barbara Myler<br>
                             </td>
                             <td align="left">Director<br>
                             </td>
@@ -179,7 +179,7 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                             <td align="left">Director</td>
                           </tr>
                           <tr>
-                            <td id="BOLD" align="left">Jeff Wheat</td>
+                            <td id="BOLD" align="left">Phil Lantis</td>
                             <td align="left">Director</td>
                             <td align="left"><br></td>
                             <td id="BOLD" align="left">Patti Rasmussen</td>
@@ -189,7 +189,7 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                             <td id="BOLD" align="left">Candy Veluzat</td>
                             <td align="left">Director</td>
                             <td align="left"><br></td>
-                            <td id="BOLD" align="left">Michelle Rennie<br></td>
+                            <td id="BOLD" align="left">Linda Tarnoff<br></td>
                             <td align="left">Director</td>
                           </tr>
                           <tr>
@@ -197,10 +197,10 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                             <td align="left">Director</td>
                             <td align="left"><br></td>
                             <td id="BOLD" align="left">Tim Burkhart<br></td>
-                            <td align="left">Associate Director</td>
+                            <td align="left">Director</td>
                           </tr>
                           <tr>
-                            <td id="BOLD" align="left">Tim Murphy<br></td>
+                            <td id="BOLD" align="left">Phil Lantis<br></td>
                             <td align="left">Director</td>
                             <td align="left"><br></td>
                             <td id="BOLD" align="left"></td>
@@ -217,9 +217,9 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                             <td id="BOLD" align="left">Chris Mowry</td>
                             <td align="left">Park Superintendent</td>
                             <td align="left">&nbsp;</td>
-                            <td id="BOLD" align="left">Maggie Romero<br>
+                            <td id="BOLD" align="left"><br>
                             </td>
-                            <td align="left">Museum Administrator</td>
+                            <td align="left"></td>
                           </tr>
                           <tr>
                             <td id="BOLD" align="left"><br>
