--- a/index.htm
+++ b/index.htm
@@ -277,14 +277,6 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <!-------------------------------------------------------------------------------->
-<h3>See free 
-<a href= "Event_Pages/spring2024/Movies-Feb-Mar-lg.jpg" 
-title="Free Movies" rel="lightbox[movies]">
-Movies in the Park! </h3>
-<img src="Event_Pages/spring2024/Movies-Feb-Mar-sm.jpg" />
-</a>
-<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<!-------------------------------------------------------------------------------->
 <a href= "Event_Pages/spring2024/CraftyKids-Mar-Apr-lg.jpg" 
 title="Crafts for Kids" rel="lightbox[crafts]">
 <h3>Crafts for Kids!</h3>
@@ -296,6 +288,14 @@ title="Crafts for Kids" rel="lightbox[crafts]">
 title="Yoga in the Park" rel="lightbox[yoga]">
 <h3>Yoga in the Park</h3>
 <img src="Event_Pages/spring2024/Yoga-Mar-sm.jpg"
+</a>
+<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+<!-------------------------------------------------------------------------------->
+<h3>See free 
+<a href= "Event_Pages/spring2024/Movies-Feb-Mar-lg.jpg" 
+title="Free Movies" rel="lightbox[movies]">
+Movie in the Park March 30<sup>th</sup>! </h3>
+<img src="Event_Pages/spring2024/Movies-Feb-Mar-sm.jpg" />
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <!-------------------------------------------------------------------------------->
@@ -314,8 +314,14 @@ title="Free Movies" rel="lightbox[movies]">
 Movies in the Park! </h3>
 <img src="Event_Pages/spring2024/Movies2-June-Aug-sm.jpg" />
 </a>
-<br>
+<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <!-------------------------------------------------------------------------------->
+<h3>Mark your calendars for this year&rsquo;s</h3>
+<h2>Hart of the West Pow Wow</h2>
+<h4>Click on the banner below for details, as they become available.<br></h4>
+<a href="Event_Pages/powwow.html" title="2024 Pow Wow">
+<img src="Event_Pages/powwow/2024/PowWow2024-sm.jpg" />
+</a>
 <!-------------------------------------------------------------------------------->
 <!--
 
@@ -351,19 +357,19 @@ Barnyard Tours
 </a>
 </td></tr>
 <tr> <td id="EventDate">
-February &amp; March
-</td> <td id="Event"> 
-<a href= "Event_Pages/spring2024/Movies-Feb-Mar-lg.jpg" 
-title="Free Movies" rel="lightbox[movies]">
-Free Movies in the Park!
-</a>
-</td></tr>
-<tr> <td id="EventDate">
 March 7<sup>th</sup>&ndash;28<sup>th</sup>
 </td> <td id="Event"> 
 <a href= "Event_Pages/spring2024/Yoga-Mar-lg.jpg" 
 title="Yoga in the Park" rel="lightbox[yoga]">
 Yoga in the Park
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+March 30<sup>th</sup>
+</td> <td id="Event"> 
+<a href= "Event_Pages/spring2024/Movies-Feb-Mar-lg.jpg" 
+title="Free Movie" rel="lightbox[movies]">
+Free Movie in the Park!
 </a>
 </td></tr>
 <tr> <td id="EventDate">
@@ -388,6 +394,13 @@ June&mdash;August
 <a href= "Event_Pages/spring2024/Movies2-June-Aug-lg.jpg" 
 title="More Free Movies" rel="lightbox[movies]">
 More Movies in the Park!
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+Saturday &amp; Sunday, Oct. 5<sup>th</sup>&ndash;6<sup>th</sup>
+</td> <td id="Event"> 
+<a href= "Event_Pages/powwow.html">
+30<sup>th</sup> Annual Hart of the West Pow Wow!
 </a>
 </td></tr>
 <!--
