--- a/index.html
+++ b/index.html
@@ -277,17 +277,12 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <!-------------------------------------------------------------------------------->
-<a href= "Event_Pages/spring2024/CraftyKids-Mar-Apr-lg.jpg" 
-title="Crafts for Kids" rel="lightbox[crafts]">
-<h3>Crafts for Kids!</h3>
-<img src="Event_Pages/spring2024/CraftyKids-Mar-Apr-sm.jpg" />
-</a>
-<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<!-------------------------------------------------------------------------------->
-<a href= "Event_Pages/spring2024/Yoga-Mar-lg.jpg" 
-title="Yoga in the Park" rel="lightbox[yoga]">
-<h3>Yoga in the Park</h3>
-<img src="Event_Pages/spring2024/Yoga-Mar-sm.jpg"
+<h3>Don't miss this year&rsquo;s</h3>
+<h2>Cowboy Festival</h2>
+<h4>Click on the banner below for details.<br></h4>
+<a href="https://cowboyfestival.org/" 
+target="_blank" title="2024 Cowboy Festival">
+<img src="Event_Pages/spring2024/CowboyFest2024-sm.jpg" />
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <!-------------------------------------------------------------------------------->
@@ -299,12 +294,17 @@ Movie in the Park March 30<sup>th</sup>! </h3>
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <!-------------------------------------------------------------------------------->
-<h3>Mark your calendars for this year&rsquo;s</h3>
-<h2>Cowboy Festival</h2>
-<h4>Click on the banner below for details, as they become available.<br></h4>
-<a href="https://cowboyfestival.org/" 
-target="_blank" title="2024 Cowboy Festival">
-<img src="Event_Pages/spring2024/cowboyfest2024-sm.jpg" />
+<a href= "Event_Pages/spring2024/Yoga-Mar-lg.jpg" 
+title="Yoga in the Park" rel="lightbox[yoga]">
+<h3>Yoga in the Park</h3>
+<img src="Event_Pages/spring2024/Yoga-Mar-sm.jpg"
+</a>
+<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+<!-------------------------------------------------------------------------------->
+<a href= "Event_Pages/spring2024/CraftyKids-Mar-Apr-lg.jpg" 
+title="Crafts for Kids" rel="lightbox[crafts]">
+<h3>Crafts for Kids!</h3>
+<img src="Event_Pages/spring2024/CraftyKids-Mar-Apr-sm.jpg" />
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <!-------------------------------------------------------------------------------->
@@ -365,7 +365,7 @@ Yoga in the Park
 </a>
 </td></tr>
 <tr> <td id="EventDate">
-March 30<sup>th</sup>
+March 30<sup>th</sup> at 1pm
 </td> <td id="Event"> 
 <a href= "Event_Pages/spring2024/Movies-Feb-Mar-lg.jpg" 
 title="Free Movie" rel="lightbox[movies]">
@@ -373,7 +373,7 @@ Free Movie in the Park!
 </a>
 </td></tr>
 <tr> <td id="EventDate">
-March &amp; April
+Saturday, April 13<sup>th</sup>, 11am&ndash;12:30pm
 </td> <td id="Event"> 
 <a href= "Event_Pages/spring2024/CraftyKids-Mar-Apr-lg.jpg" 
 title="Crafts for Kids" rel="lightbox[crafts">
@@ -381,7 +381,7 @@ Crafts for Kids!
 </a>
 </td></tr>
 <tr> <td id="EventDate">
-Thursday&ndash;Sunday,<br>Apr. 18<sup>th</sup>&ndash;21<sup>st</sup>
+Saturday &amp; Sunday,<br>Apr. 20<sup>th</sup>&ndash;21<sup>st</sup>
 </td> <td id="Event"> 
 <a href="https://cowboyfestival.org/" 
 target="_blank" title="2024 Cowboy Festival">
