--- a/index.htm
+++ b/index.htm
@@ -308,6 +308,17 @@ title="Crafts for Kids" rel="lightbox[crafts]">
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <!-------------------------------------------------------------------------------->
+<a href= "Event_Pages/spring2024/CritterFair-lg.jpg" 
+title="Critter Fair" rel="lightbox[critter]">
+<h3>Critter Fair in the park!</h3>
+<img src="Event_Pages/spring2024/CritterFair-sm.jpg" />
+</a>
+<a href= "Event_Pages/spring2024/CritterFairVendorReg-lg.jpg" 
+title="Critter Fair Vendor Application" rel="lightbox[critter]">
+<h4>Click here for Critter Fair Vendor Application</h4>
+</a>
+<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+<!-------------------------------------------------------------------------------->
 <h3>See MORE 
 <a href= "Event_Pages/spring2024/Movies2-June-Aug-lg.jpg" 
 title="Free Movies" rel="lightbox[movies]">
@@ -386,6 +397,14 @@ Saturday &amp; Sunday,<br>Apr. 20<sup>th</sup>&ndash;21<sup>st</sup>
 <a href="https://cowboyfestival.org/" 
 target="_blank" title="2024 Cowboy Festival">
 Cowboy Festival
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+Saturday, May 18<sup>th</sup>
+</td> <td id="Event"> 
+<a href= "Event_Pages/spring2024/CritterFair-lg.jpg" 
+title="Critter Fair" rel="lightbox[critters]">
+Critter Fair in the Park!
 </a>
 </td></tr>
 <tr> <td id="EventDate">
