Fixed Yoga (in previous upload), and removed past movie.

--- a/index.htm
+++ b/index.htm
@@ -286,25 +286,17 @@ target="_blank" title="2024 Cowboy Festival">
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <!-------------------------------------------------------------------------------->
-<h3>See free 
-<a href= "Event_Pages/spring2024/Movies-Feb-Mar-lg.jpg" 
-title="Free Movies" rel="lightbox[movies]">
-Movie in the Park March 30<sup>th</sup>! </h3>
-<img src="Event_Pages/spring2024/Movies-Feb-Mar-sm.jpg" />
-</a>
-<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<!-------------------------------------------------------------------------------->
-<a href= "Event_Pages/spring2024/Yoga-Mar-lg.jpg" 
-title="Yoga in the Park" rel="lightbox[yoga]">
-<h3>Yoga in the Park</h3>
-<img src="Event_Pages/spring2024/Yoga-Mar-sm.jpg"
-</a>
-<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<!-------------------------------------------------------------------------------->
 <a href= "Event_Pages/spring2024/CraftyKids-Mar-Apr-lg.jpg" 
 title="Crafts for Kids" rel="lightbox[crafts]">
 <h3>Crafts for Kids!</h3>
 <img src="Event_Pages/spring2024/CraftyKids-Mar-Apr-sm.jpg" />
+</a>
+<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+<!-------------------------------------------------------------------------------->
+<a href= "Event_Pages/spring2024/Yoga-Apr-lg.jpg" 
+title="Yoga in the Park" rel="lightbox[yoga]">
+<h3>Yoga in the Park</h3>
+<img src="Event_Pages/spring2024/Yoga-Apr-sm.jpg"
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <!-------------------------------------------------------------------------------->
@@ -368,22 +360,6 @@ Barnyard Tours
 </a>
 </td></tr>
 <tr> <td id="EventDate">
-March 7<sup>th</sup>&ndash;28<sup>th</sup>
-</td> <td id="Event"> 
-<a href= "Event_Pages/spring2024/Yoga-Mar-lg.jpg" 
-title="Yoga in the Park" rel="lightbox[yoga]">
-Yoga in the Park
-</a>
-</td></tr>
-<tr> <td id="EventDate">
-March 30<sup>th</sup> at 1pm
-</td> <td id="Event"> 
-<a href= "Event_Pages/spring2024/Movies-Feb-Mar-lg.jpg" 
-title="Free Movie" rel="lightbox[movies]">
-Free Movie in the Park!
-</a>
-</td></tr>
-<tr> <td id="EventDate">
 Saturday, April 13<sup>th</sup>, 11am&ndash;12:30pm
 </td> <td id="Event"> 
 <a href= "Event_Pages/spring2024/CraftyKids-Mar-Apr-lg.jpg" 
@@ -397,6 +373,14 @@ Saturday &amp; Sunday,<br>Apr. 20<sup>th</sup>&ndash;21<sup>st</sup>
 <a href="https://cowboyfestival.org/" 
 target="_blank" title="2024 Cowboy Festival">
 Cowboy Festival
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+Apr. 25<sup>th</sup>&ndash;May 16<sup>th</sup>
+</td> <td id="Event"> 
+<a href= "Event_Pages/spring2024/Yoga-Apr-lg.jpg" 
+title="Yoga in the Park" rel="lightbox[yoga]">
+Yoga in the Park
 </a>
 </td></tr>
 <tr> <td id="EventDate">
